CSS cleanup [project border, paginator alignment and some very minor fixes]

--- a/assets/css/myCss.css
+++ b/assets/css/myCss.css
@@ -73,3 +73,21 @@
 .category{
     margin: 3px;
 }
+
+.flex-align-center{
+    display: flex;
+    align-items: center;
+}
+.project-border{
+    border: 1px solid rgba(255, 255, 255, 0.267) !important;
+    border-left: none !important;
+}
+@media (max-width:800px){
+    .project-border{
+        border: 1px solid rgba(255, 255, 255, 0.267) !important;
+        
+    }
+}
+.paginator{
+    text-align: center;
+}
